Добавлена валидация полей в CardDto. Добавлена валидация ключа в CardNumberEncryptor. Добавлены тесты CardNumberEncryptorTest
