# docs/api-docs.yaml
@@ -358,13 +358,13 @@ components:
           example: password123
         role:
           type: string
-          description: Роль пользователя в системе
+          description: Роль пользователя
           example: USER
-          enum:
-            - USER
-            - ADMIN
       description: Данные для регистрации нового пользователя
     AuthRequest:
+      required:
+        - password
+        - username
       type: object
       properties:
         username:
@@ -385,6 +385,8 @@ components:
           example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...
       description: Ответ после успешной аутентификации
     UserDto:
+      required:
+        - username
       type: object
       properties:
         id:
@@ -400,11 +402,13 @@ components:
           type: string
           description: Роль пользователя в системе
           example: USER
-          enum:
-            - USER
-            - ADMIN
       description: DTO для представления пользователя системы
     CardDto:
+      required:
+        - expirationDate
+        - maskedNumber
+        - owner
+        - status
       type: object
       properties:
         id:
@@ -413,22 +417,28 @@ components:
           format: int64
           example: 1
         maskedNumber:
+          pattern: "^\\d{4} \\d{4} \\d{4} \\d{4}$"
           type: string
-          description: Номер карты (маскированный)
-          example: '**** **** **** 1234'
+          description: Номер банковской карты
+          example: 1111 2222 3333 4444
         owner:
+          pattern: "^[а-яА-ЯёЁ\\s]+$"
           type: string
           description: Владелец карты
           example: Иван Иванов
         expirationDate:
+          pattern: "^(0[1-9]|1[0-2])\\/\\d{4}$"
           type: string
           description: Срок действия карты
           example: 12/2025
         status:
           type: string
           description: Статус карты
-          example: Активна
+          example: ACTIVE
           enum:
+            - ACTIVE
+            - BLOCKED
+            - EXPIRED
             - ACTIVE
             - BLOCKED
             - EXPIRED
@@ -492,8 +502,6 @@ components:
           format: int64
         sort:
           $ref: "#/components/schemas/SortObject"
-        unpaged:
-          type: boolean
         paged:
           type: boolean
         pageNumber:
@@ -502,14 +510,16 @@ components:
         pageSize:
           type: integer
           format: int32
+        unpaged:
+          type: boolean
     SortObject:
       type: object
       properties:
         empty:
           type: boolean
-        unsorted:
-          type: boolean
         sorted:
+          type: boolean
+        unsorted:
           type: boolean
     Page:
       type: object
